[package]
name = "zerotoprod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zerotoprod"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
